[gd_scene load_steps=7 format=3 uid="uid://v6xt7pdb0jlv"]

[ext_resource type="Script" path="res://scripts/image_controller.gd" id="1_lb0vh"]
[ext_resource type="Script" path="res://scripts/shader_list.gd" id="2_p6d03"]
[ext_resource type="Texture2D" uid="uid://b274scj6pa15g" path="res://assets/ruins.jpg" id="2_po183"]
[ext_resource type="Script" path="res://scripts/open_img_button.gd" id="3_25rbw"]

[sub_resource type="GDScript" id="GDScript_bmob7"]
script/source = "extends TextureRect


func update_pivot():
	pivot_offset = size / 2
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5dc6m"]

[node name="MainWindow" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageBox" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/ImageBox"]
layout_mode = 2
size_flags_vertical = 3
stretch = true
script = ExtResource("1_lb0vh")

[node name="MainImageViewport" type="SubViewport" parent="HBoxContainer/ImageBox/SubViewportContainer"]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(965, 648)
render_target_update_mode = 4

[node name="Image" type="TextureRect" parent="HBoxContainer/ImageBox/SubViewportContainer/MainImageViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource("2_po183")
stretch_mode = 5
script = SubResource("GDScript_bmob7")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 10

[node name="SettingsBox" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/SettingsBox"]
layout_mode = 2
text = "Effects:"
uppercase = true

[node name="ShaderList" type="ItemList" parent="HBoxContainer/MarginContainer/SettingsBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_5dc6m")
allow_reselect = true
script = ExtResource("2_p6d03")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MarginContainer/SettingsBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer/SettingsBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="SliderList" type="VBoxContainer" parent="HBoxContainer/MarginContainer/SettingsBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="OpenImg" type="Button" parent="HBoxContainer/MarginContainer/SettingsBox"]
layout_mode = 2
text = "Open Image"
script = ExtResource("3_25rbw")

[node name="SaveImg" type="Button" parent="HBoxContainer/MarginContainer/SettingsBox"]
layout_mode = 2
text = "Save Image"

[node name="LoadWindow" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(450, 360)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true

[node name="SaveWindow" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(450, 360)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.png")
show_hidden_files = true

[connection signal="item_selected" from="HBoxContainer/MarginContainer/SettingsBox/ShaderList" to="HBoxContainer/MarginContainer/SettingsBox/ShaderList" method="_on_shaderlist_item_selected"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/SettingsBox/OpenImg" to="HBoxContainer/MarginContainer/SettingsBox/OpenImg" method="_on_pressed"]
[connection signal="button_down" from="HBoxContainer/MarginContainer/SettingsBox/SaveImg" to="HBoxContainer/MarginContainer/SettingsBox/ShaderList" method="_on_button_down"]
[connection signal="file_selected" from="LoadWindow" to="HBoxContainer/MarginContainer/SettingsBox/ShaderList" method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveWindow" to="HBoxContainer/MarginContainer/SettingsBox/ShaderList" method="_on_save_file_selected"]
